--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       TAG_NAME: ${{ steps.generate_tag_name.outputs.TAG_NAME }}
-      CLI_VERSION: ${{ steps.extract_cli_version.outputs.CLI_VERSION }}
+      CLI_VERSION: ${{ steps.set_outputs.outputs.CLI_VERSION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3.5.2
@@ -86,14 +86,12 @@ jobs:
         id: extract_cli_version
         run: |
           chmod +x ./.github/scripts/extract_cli_version.sh
-          CLI_VERSION=$(./.github/scripts/extract_cli_version.sh cx-linux | grep -Eo '^[0-9]+\.[0-9]+\.[0-9]+')
+          ./.github/scripts/extract_cli_version.sh cx-linux
 
-          # Debugging output
-          echo "CLI Version Extracted: $CLI_VERSION"
-      
-          # Make CLI_VERSION available for later steps
-          echo "CLI_VERSION=$CLI_VERSION" >> $GITHUB_ENV
-          echo "CLI_VERSION=$CLI_VERSION" >> $GITHUB_OUTPUT
+      - name: Echo CLI version to outputs
+        id: set_outputs
+        run: |
+          echo "::set-output name=CLI_VERSION::${{ env.CLI_VERSION }}"
 
       - name: Release
         uses: softprops/action-gh-release@v1
