Try java wrapper 2.1.8 (AST-000)

--- a/.github/workflows/update-cli.yml
+++ b/.github/workflows/update-cli.yml
@@ -1,10 +1,6 @@
 name: Update checkmarx Java wrapper
 on:
   workflow_dispatch:
-    inputs:
-      tag:
-        description: 'Next release tag'
-        required: true
   schedule:
     - cron: '0 0 * * *'
 
@@ -27,7 +23,7 @@ jobs:
       - name: Get Latest Checkmarx Java wrapper version
         id: ast-cli-java-wrapper
         run: |
-          echo ::set-output name=release_tag::${{ inputs.tag }}
+          echo ::set-output name=release_tag::$(curl -s "https://repo1.maven.org/maven2/com/checkmarx/ast/ast-cli-java-wrapper/maven-metadata.xml" | grep -oPm1 "(?<=<latest>)[^<]+")
           echo ::set-output name=current_tag::$(<ast-cli-java-wrapper.version)
       - name: Update Checkmarx Java wrapper version
         if: steps.ast-cli-java-wrapper.outputs.current_tag != steps.ast-cli-java-wrapper.outputs.release_tag
