--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,10 @@ jobs:
         uses: actions/checkout@v3.5.2
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          lfs: true
+
+      - name: Checkout LFS objects
+        run: git lfs checkout
 
       - name: Create Release Name
         id: generate_tag_name
