Update ast-cli-java-wrapper to version 2.2.2-eclipse

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-2.1.8.jar filter=lfs diff=lfs merge=lfs -text
+checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-2.2.2-eclipse.jar filter=lfs diff=lfs merge=lfs -text
