--- a/checkmarx-ast-eclipse-plugin/lib/.gitattributes
+++ b/checkmarx-ast-eclipse-plugin/lib/.gitattributes
@@ -1,1 +1,1 @@
-checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-2.1.8.jar filter=lfs diff=lfs merge=lfs -text
+checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-2.2.2-eclipse.jar filter=lfs diff=lfs merge=lfs -text
