--- a/.github/workflows/update-cli.yml
+++ b/.github/workflows/update-cli.yml
@@ -1,8 +1,8 @@
 name: Update checkmarx Java wrapper
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * *'
+  repository_dispatch:
+    types: [java-wrapper-version-update]
 
 jobs:
   update-checkmarx-cli:
