--- a/checkmarx-ast-eclipse-plugin/.classpath
+++ b/checkmarx-ast-eclipse-plugin/.classpath
@@ -11,12 +11,13 @@
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-annotations-2.15.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-core-2.15.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.18.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/ast-cli-java-wrapper-2.4.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-databind-2.15.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.mylyn.commons.ui_3.25.2.v20200813-0821.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.apache.commons.lang_2.6.0.v20220406-2305.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org-eclipse-mylyn-commons-core.jar"/>
-	<classpathentry kind="src" path="src/"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.18.0.jar"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
