--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
 	</modules>
 
 	<properties>
-		<tycho.version>1.7.0</tycho.version>
+		<tycho.version>4.0.11</tycho.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
 	<build>
@@ -31,6 +31,48 @@
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-p2-director-plugin</artifactId>
 					<version>${tycho.version}</version>
+				</plugin>
+
+				<!-- This plugin configuration is used to store Eclipse m2e settings only. -->
+				<!-- It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.eclipse.tycho</groupId>
+										<artifactId>tycho-packaging-plugin</artifactId>
+										<versionRange>[0.0.0,)</versionRange>
+										<goals>
+											<goal>build-qualifier</goal>
+											<goal>validate-id</goal>
+											<goal>validate-version</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.eclipse.tycho</groupId>
+										<artifactId>tycho-compiler-plugin</artifactId>
+										<versionRange>[0.0.0,)</versionRange>
+										<goals>
+											<goal>compile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -42,7 +84,7 @@
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-versions-plugin</artifactId>
@@ -66,9 +108,11 @@
 				<artifactId>tycho-compiler-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
-					<!-- We should turn on this flag and resolve all the warning issues! -->
+					<!-- We should turn on this flag and resolve all the warning
+					issues! -->
 					<showWarnings>false</showWarnings>
-					<!-- <compilerArgument>-warn:+discouraged,+forbidden,-unavoidableGenericProblems,-warningToken</compilerArgument> -->
+					<!--
+					<compilerArgument>-warn:+discouraged,+forbidden,-unavoidableGenericProblems,-warningToken</compilerArgument> -->
 				</configuration>
 			</plugin>
 
@@ -81,12 +125,14 @@
 						<phase>package</phase>
 						<id>package-feature</id>
 						<configuration>
-							<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}
+							<finalName>
+								${project.artifactId}_${unqualifiedVersion}.${buildQualifier}
 							</finalName>
 						</configuration>
 					</execution>
 				</executions>
-				<!-- <configuration> <format>'v'yyyyMMddHHmm</format> </configuration> -->
+				<!-- <configuration> <format>'v'yyyyMMddHHmm</format>
+				</configuration> -->
 			</plugin>
 
 			<plugin>
@@ -94,7 +140,7 @@
 				<artifactId>target-platform-configuration</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
-					<executionEnvironment>JavaSE-1.8</executionEnvironment>
+					<executionEnvironment>JavaSE-17</executionEnvironment>
 					<pomDependencies>consider</pomDependencies>
 					<environments>
 						<environment>
@@ -113,6 +159,7 @@
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
+					
 				</configuration>
 			</plugin>
 
@@ -121,9 +168,14 @@
 
 	<repositories>
 		<repository>
-			<id>2019-09</id>
+			<id>2024-12</id>
 			<layout>p2</layout>
-			<url>https://download.eclipse.org/releases/2019-09</url>
+			<url>https://download.eclipse.org/releases/2024-12</url>
+		</repository>
+		<repository>
+			<id>swtbot</id>
+			<layout>p2</layout>
+			<url>https://download.eclipse.org/technology/swtbot/releases/latest</url>
 		</repository>
 	</repositories>
 
@@ -131,12 +183,12 @@
 		<dependency>
 			<groupId>jakarta.inject</groupId>
 			<artifactId>jakarta.inject-api</artifactId>
-			<version>1.0.5</version>
+			<version>2.0.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.osgi</groupId>
-		    <artifactId>org.osgi.service.event</artifactId>
-		    <version>1.4.1</version>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.service.event</artifactId>
+			<version>1.4.1</version>
 		</dependency>
 	</dependencies>
 </project>
