Code migration changes (exclude java wrapper)

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@
 /.metadata/
 .idea/
 .vs/
-.vscode/
+.vscode/checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-*.jar
+checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-*.jar
