Changed the test classes as per the junit5

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,4 @@
 /.metadata/
 .idea/
 .vs/
-.vscode/checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-*.jar
-checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-*.jar
+*.jar
