--- a/pom.xml
+++ b/pom.xml
@@ -189,5 +189,11 @@
 			<artifactId>org.osgi.service.event</artifactId>
 			<version>1.4.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
