--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-2.4.14-oss.jar filter=lfs 
 checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-2.4.15.jar filter=lfs diff=lfs merge=lfs -text
 checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-2.4.16-dev.jar filter=lfs diff=lfs merge=lfs -text
 *.jar filter=lfs diff=lfs merge=lfs -text
+checkmarx-ast-eclipse-plugin/lib/ast-cli-java-wrapper-2.4.18.jar filter=lfs diff=lfs merge=lfs -text
