Update CI workflow to include push trigger
Added a push trigger for the CI workflow on the codeMigration branch.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches: 
       - main
+  push:
+    branches:
+      - codeMigration
 
 jobs:
 
@@ -61,4 +64,5 @@ jobs:
         run: |
           Xvfb -ac :99 -screen 0 1920x1080x16 &
           mvn verify -Dtest.includes="**/integration/*Test.java"
+
 
