--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,17 @@
 			<layout>p2</layout>
 			<url>https://download.eclipse.org/technology/swtbot/releases/latest</url>
 		</repository>
+		<repository>
+			<id>orbit</id>
+			<layout>p2</layout>
+			<url>https://download.eclipse.org/tools/orbit/downloads/latest-R/</url>
+		</repository>
+		<repository>
+			<id>mylyn</id>
+			<layout>p2</layout>
+			<url>https://download.eclipse.org/mylyn/releases/latest</url>
+		</repository>
+
 	</repositories>
 
 	<dependencies>
