--- a/pom.xml
+++ b/pom.xml
@@ -90,19 +90,6 @@
 				<artifactId>tycho-versions-plugin</artifactId>
 				<version>${tycho.version}</version>
 			</plugin>
-
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<useUIHarness>true</useUIHarness>
-					<useUIThread>false</useUIThread>
-					<product>org.eclipse.sdk.ide</product>
-					<application>org.eclipse.ui.ide.workbench</application>
-				</configuration>
-			</plugin>
-
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-compiler-plugin</artifactId>
@@ -140,7 +127,7 @@
 				<version>${tycho.version}</version>
 				<configuration>
 					<executionEnvironment>JavaSE-17</executionEnvironment>
-					<pomDependencies>consider</pomDependencies>
+					<pomDependencies>ignore</pomDependencies>
 					<environments>
 						<environment>
 							<os>linux</os>
@@ -177,9 +164,9 @@
 			<url>https://download.eclipse.org/technology/swtbot/releases/latest</url>
 		</repository>
 		<repository>
-			<id>orbit</id>
-			<layout>p2</layout>
-			<url>https://download.eclipse.org/tools/orbit/downloads/latest-R/</url>
+		  <id>orbit-4.32</id>
+		  <layout>p2</layout>
+		  <url>https://download.eclipse.org/tools/orbit/simrel/orbit-aggregation/release/4.32.0</url>
 		</repository>
 		<repository>
 			<id>mylyn</id>
@@ -200,11 +187,5 @@
 			<artifactId>org.osgi.service.event</artifactId>
 			<version>1.4.1</version>
 		</dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
 </project>
