--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,6 @@ on:
   pull_request:
     branches: 
       - main
-  push:
-    branches:
-      - codeMigration
 
 jobs:
 
@@ -17,7 +14,7 @@ jobs:
           lfs: true
       - name: Checkout LFS objects
         run: git lfs checkout
-      - uses: actions/setup-java@v4
+      - uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
@@ -26,6 +23,8 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
+      - name: Clean Maven Repository
+        run: rm -rf ~/.m2/repository/org/eclipse/mylyn/
       - name: Run UI Tests
         env:
           CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
@@ -35,7 +34,7 @@ jobs:
           DISPLAY: :99.0
         run: |
           Xvfb -ac :99 -screen 0 1920x1080x16 &
-          mvn verify -Dtest.includes="**/ui/*.java"
+          mvn clean verify -Dtest.includes="**/ui/*.java" -U --no-transfer-progress
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -45,7 +44,7 @@ jobs:
           lfs: true
       - name: Checkout LFS objects
         run: git lfs checkout
-      - uses: actions/setup-java@v4
+      - uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
@@ -54,6 +53,8 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
+      - name: Clean Maven Repository
+        run: rm -rf ~/.m2/repository/org/eclipse/mylyn/
       - name: Run Integration Tests
         env:
           CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
@@ -63,6 +64,4 @@ jobs:
           DISPLAY: :99.0
         run: |
           Xvfb -ac :99 -screen 0 1920x1080x16 &
-          mvn verify -Dtest.includes="**/integration/*Test.java"
-
-
+          mvn clean verify -Dtest.includes="**/integration/*Test.java" -U --no-transfer-progress
