--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches: 
       - main
+  push:
+    branches:
+      - codeMigration
 
 jobs:
 
@@ -14,7 +17,7 @@ jobs:
           lfs: true
       - name: Checkout LFS objects
         run: git lfs checkout
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
@@ -23,8 +26,6 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
-      - name: Clean Maven Repository
-        run: rm -rf ~/.m2/repository/org/eclipse/mylyn/
       - name: Run UI Tests
         env:
           CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
@@ -34,7 +35,7 @@ jobs:
           DISPLAY: :99.0
         run: |
           Xvfb -ac :99 -screen 0 1920x1080x16 &
-          mvn clean verify -Dtest.includes="**/ui/*.java" -U --no-transfer-progress
+          mvn verify -Dtest.includes="**/ui/*.java"
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -44,7 +45,7 @@ jobs:
           lfs: true
       - name: Checkout LFS objects
         run: git lfs checkout
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
@@ -53,8 +54,6 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
-      - name: Clean Maven Repository
-        run: rm -rf ~/.m2/repository/org/eclipse/mylyn/
       - name: Run Integration Tests
         env:
           CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
@@ -64,4 +63,4 @@ jobs:
           DISPLAY: :99.0
         run: |
           Xvfb -ac :99 -screen 0 1920x1080x16 &
-          mvn clean verify -Dtest.includes="**/integration/*Test.java" -U --no-transfer-progress
+          mvn verify -Dtest.includes="**/integration/*Test.java"
